# visco-connect-v3

./: .gitignore  CMakeLists.txt  README.md  RELEASE_WORKFLOW.md  build.bat  clean.bat  config.example.json  deploy.bat  setup_wireguard_dlls.bat
.github/: copilot-instructions.md
Guides/: FIREWALL_CONFIGURATION.md  FIREWALL_QUICK_REFERENCE.md  FLUSH_WARNING_EXPLANATION.md  MTU_CONFIGURATION.md  NON_BLOCKING_FORWARDING_OPTIMIZATION.md  PERSISTENT_KEEPALIVE_CONFIGURATION.md  QUICKSTART.md  RTSP_FIX_SUMMARY.md  RTSP_IMPLEMENTATION_DETAILS.md  RTSP_PORT_FORWARDING_FIX.md  RTSP_TROUBLESHOOTING.md  WIREGUARD_FIX_SUMMARY.md  WIREGUARD_FIX_SUMMARY_FINAL.md  WIREGUARD_KVS_INTEGRATION_SUMMARY.md  WIREGUARD_LOGOUT_IMPLEMENTATION.md  WIREGUARD_TUNNEL_LOGIC_REFERENCE.md  WIREGUARD_VPN_INTEGRATION.md
benchmarks/: test_echo.py  test_rtsp_connection.py  test_rtsp_forwarding.py
include/: AuthDialog.h  CameraApiService.h  CameraConfig.h  CameraDiscovery.h  CameraManager.h  CameraPreviewWidget.h  ConfigManager.h  EchoServer.h  FirewallManager.h  Logger.h  MainWindow.h  NetworkInterfaceManager.h  PingResponder.h  PortForwarder.h  SystemTrayManager.h  UserProfileWidget.h  VpnWidget.h  WindowsService.h  WireGuardConfigDialog.h  WireGuardManager.h
installer/: AddFirewallRules.ps1  Bundle.wxs  CameraServerBasic.wxs  CameraServerComplete.wxs  CameraServerInstaller.wxs  CameraServerMain.wxs  CameraServerSimple.wxs  DEMO_INSTALLER_README.md  FIREWALL_SOLUTION_FINAL.md  INSTALLATION_SUCCESS.md  License.rtf  README.md  RemoveFirewallRules.ps1  ViscoConnectDemo.wxs  ViscoConnectDemo_Fixed.wxs  build_installer.bat  build_installer_enhanced.bat  convert_icon.ps1  create_icon.ps1  remove_firewall.bat  setup_firewall.bat
resources/: app.manifest  app.rc  resources.qrc
src/: AuthDialog.cpp  CameraApiService.cpp  CameraConfig.cpp  CameraDiscovery.cpp  CameraManager.cpp  CameraPreviewWidget.cpp  ConfigManager.cpp  EchoServer.cpp  FirewallManager.cpp  Logger.cpp  MainWindow.cpp  NetworkInterfaceManager.cpp  PingResponder.cpp  PortForwarder.cpp  SystemTrayManager.cpp  UserProfileWidget.cpp  VpnWidget.cpp  WindowsService.cpp  WireGuardConfigDialog.cpp  WireGuardManager.cpp  main.cpp
